# acf

./: .gitignore  Readme.md
acf_C++/fem2d/: CMakeLists.txt  Readme.md
acf_C++/fem2d/output/: u.txt
acf_C++/fem2d/src/: Mesh.cpp  Mesh.hpp  Utils.cpp  Utils.hpp  main.cpp
acf_C++/fem2d/src/LinSysSolver/: EigenLibSolver.cpp  EigenLibSolver.hpp  LinSysSolver.hpp
acf_C++/fem2d_heat/: CMakeLists.txt
acf_C++/fem2d_heat/src/: Mesh.cpp  Mesh.hpp  Utils.cpp  Utils.hpp  main.cpp
acf_C++/fem2d_heat/src/LinSysSolver/: EigenLibSolver.cpp  EigenLibSolver.hpp  LinSysSolver.hpp
acf_matlab/fem2d/: fem2d.m  u_d.m
acf_unmodified/fem2d_heat/: u_d.m
